Wrote the code to do the thing.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "underscore": "",
     "moment": "",
-    "bluebird": ""
+    "bluebird": "",
+    "minimist": ""
   }
 }
